@@ -23,6 +23,16 @@ check_logical_block_size() {
     fi
 }
 
+check_optimal_io_size() {
+    local DEV_=$(cat SCSI_DEBUG_DEV)
+    # Verify optimal_io_size
+    SYSFS_OPTIMAL_IO_SIZE=$(echo /sys/block/$(basename $DEV_)/queue/optimal_io_size)
+    if [ -f "$SYSFS_OPTIMAL_IO_SIZE" ] ; then
+	ACTUAL_OPTIMAL_IO_SIZE=$(cat $SYSFS_OPTIMAL_IO_SIZE)
+	test $ACTUAL_OPTIMAL_IO_SIZE = $1
+    fi
+}
+
 lvdev_() {
     echo "$DM_DEV_DIR/$1/$2"
 }
@@ -103,3 +113,20 @@ aux prepare_pvs $NUM_DEVS $PER_DEV_SIZE
 vgcreate -c n $vg $(cat DEVICES)
 test_snapshot_mount
 vgremove $vg
+
+aux cleanup_scsi_debug_dev
+
+# ---------------------------------------------
+# Create "enterprise-class" 512 drive w/ HW raid stripe_size = 768K
+# (logical_block_size=512, physical_block_size=512, alignment_offset=0):
+# - tests case where optimal_io_size=768k < default PE alignment=1MB
+LOGICAL_BLOCK_SIZE=512
+aux prepare_scsi_debug_dev $DEV_SIZE \
+    sector_size=$LOGICAL_BLOCK_SIZE opt_blks=1536
+check_logical_block_size $LOGICAL_BLOCK_SIZE
+check_optimal_io_size 786432
+
+aux prepare_pvs 1 $PER_DEV_SIZE
+check pv_field $(cat DEVICES) pe_start 768.00k
+
+aux cleanup_scsi_debug_dev
